--- a/style.css
+++ b/style.css
@@ -2,15 +2,330 @@
   margin: 0;
   padding: 0;
 }
+html {
+  height: 100vh;
+}
+body {
+  font-family: 'Spartan', sans-serif;
+  font-size: 15px;
+  background-image: url(bg-pattern-top-desktop.svg); 
+}
+.heading {
+  width: 19%;
+  height: auto;
+  margin-top: 60px;
+  margin-left: 100px;
+  
+}
+h1 {
+  color: hsl(303, 10%, 53%);
+  padding-bottom: 40px;
+  font-weight: 700;
+}
+
+.headPar {
+  width: 35%;
+  margin-left: 100px;
+  margin-top: -30px;
+  font-size: 15px;
+  line-height: 2;
+  color: hsl(303, 10%, 53%);
+}
+
+.stars {
+  width: 500px;
+  height: auto;
+  color: hsl(300, 43%, 22%);
+  margin-top: -200px;
+  margin-left: 50%;
+}
+.stars1 {
+  background-color: hsl(235, 88%, 98%);
+  color: hsl(303, 10%, 53%);
+  width: 90%;
+  border-radius: 5px;
+  margin-bottom: 20px;
+  padding: 15px;
+  margin-right: 100px;
+  margin-left: -50px;
+}
+.stars1 p {
+  margin-right: 30px;
+  font-weight: 700;
+}
+
+.stars2 {
+  background-color: hsl(235, 88%, 98%);
+  color: hsl(303, 10%, 53%);
+  border-radius: 5px;
+  margin-bottom: 20px;
+  padding: 15px;
+  width: 90%;
+  margin-right: 40px;
+}
+.stars2 p {
+  margin-right: -10px;
+  font-weight: 700;
+}
+.stars3 {
+  background-color: hsl(235, 88%, 98%);
+  color: hsl(303, 10%, 53%);
+  border-radius: 5px;
+  padding: 15px;
+  width: 90%;
+  margin-left: 40px;
+}
+.stars3 p {
+  margin-right: 5px;
+  font-weight: 700;
+}
+.container1 img {
+  border-radius: 50%;
+  margin-top: 30px;
+  margin-left: 20px;
+  max-width: 30%;
+  width: 40px;
+  height: 40px;
+}
+
+.container1 {
+  border-radius: 10px;
+  margin-left: 100px;
+  margin-top: 80px;
+  width: 360px;
+  height: 220px;
+  background-color: hsl(300, 43%, 22%);
+  color: hsl(0, 0%, 100%);
+ 
+}
+.container1 h5 {
+  color: hsl(333, 80%, 67%);
+}
+.container2 img {
+  border-radius: 50%;
+  margin-left: 20px;
+  max-width: 30%;
+  width: 40px;
+  height: 40px;
+}
+.container2 {
+  border-radius: 10px;
+  margin-top: -210px;
+  margin-left: 475px;
+  width: 360px;
+  height: 220px;
+  background-color: hsl(300, 43%, 22%);
+  color: hsl(0, 0%, 100%);
+ 
+}
+.con2H4 {
+  max-width: 70%;
+  margin-top: -25px;
+ 
+}
+.verified1 {
+  margin-top: -5px;
+  margin-right: 175px;
+  float: right;
+  color: hsl(333, 80%, 67%);
+
+}
+
+.container3 img {
+  border-radius: 50%;
+  margin-top: -17px;
+  margin-left: 20px;
+  max-width: 30%;
+  width: 40px;
+  height: 40px;
+}
+
+.container3 {
+  
+  border-radius: 10px;
+  margin-top: -210px;
+   margin-left: 850px;
+   width: 360px;
+  height: 220px;
+  background-color: hsl(300, 43%, 22%);
+  color: hsl(0, 0%, 100%);
+  
+  
+}
+.con3H4 {
+  max-width: 70%;
+  margin-top: -15px;
+ 
+}
+.verified2 {
+  margin-top: -20px;
+  margin-right: 175px;
+  float: right;
+  color: hsl(333, 80%, 67%);
+
+}
+.stars img {
+  
+  max-width: 30%;
+  margin-left: 15px;
+
+}
+.stars p {
+  float: right;
+}
 
 
 
+.stars p {
+  max-width: 70%;
+  float: right;
+  padding-right: 30px;
+}
+
+h4 {
+  max-width: 70%;
+  float: right;
+  margin-top: 30px;
+  margin-right: 160px;
+ 
+}
+h5 {
+  max-width: 70%;
+  float: right;
+  margin-top: 35px;
+  margin-right: 170px;
+  font-weight: 700;
+ 
+}
+
+.verified {
+  margin-top: -26px;
+  margin-left: 5px;
+  float: right;
+  color: hsl(303, 10%, 53%);
+
+}
+
+.containers p {
+  margin-left: 20px;
+  margin-bottom: 20px;
+  margin-right: 20px;
+  margin-top: 30px;
+}
 
 
+footer {
+  margin-top: 20px;
+
+}
 .attribution {
         font-size: 11px;
         text-align: center;
-      }
-      .attribution a {
+        
+}
+.attribution a {
         color: hsl(228, 45%, 44%);
-      }
+ }
+
+ @media only screen and (max-width:  500px){
+  .heading {
+    margin-top: 30px;
+    margin-left: 30px;
+    margin-right: 30px;
+    width: 310px;
+    text-align: center;
+  }
+  .headPar {
+    margin-left: 10px;
+    margin-right: 10px;
+    width: 350px;
+  }
+  
+  .stars {
+    display: flex;
+    flex-direction: column;
+    max-width: 85%;
+    margin-top: 20px;
+        
+  }
+
+  .stars img {
+    padding-left: 0.5px;
+    padding-bottom: 5px;
+   
+  }
+  
+  .stars p{
+   float: left;
+   margin-left: -1px;
+   margin-right: -50px;
+   max-width: 90%;
+   font-size: 13px;
+  }
+  
+ 
+  .stars1 {
+    width: 65%;
+    padding-left: 25%; 
+    margin-left: -210px;
+       
+  }
+  .stars2 {
+    width: 65%;
+    padding-left: 25%; 
+    margin-left: -210px;
+  }
+  .stars3 {
+     width: 65%;
+    padding-left: 25%; 
+    margin-left: -210px;
+  }
+ 
+  .containers {
+    display: flex;
+    flex-direction: column;
+       
+  }
+  .container1 {
+    margin-left: 10px;
+    width: 350px;
+    height: 220px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+
+
+  }
+  .container2 {
+    margin-left: 10px;
+    margin-top: 10px;
+    width: 350px;
+    height: 220px;
+    margin-bottom: 10px;
+  }
+  .container2 img {
+    margin-top: 20px;
+  }
+  .con2H4 {
+    margin-top: 20px;
+
+  }
+  .verified1 {
+    margin-top: -25px;
+  }
+  .container3 {
+    margin-left: 10px;
+    margin-top: 10px;
+    width: 350px;
+    height: 220px;
+  }
+  .container3 img {
+    margin-top: 20px;
+  }
+  .con3H4 {
+    margin-top: 20px;
+    margin-right: 158px;
+  }
+  .verified2 {
+    margin-top: -25px;
+  }
+  }
